error on req.login

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "test-server",
   "version": "1.0.0",
   "description": "",
-  "main": "dist/src/index.js",
+  "main": "dist/index.js",
   "scripts": {
     "prebuild": "tslint -c tslint.json -p tsconfig.json --fix",
     "build": "tsc",
